--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,25 @@
-# Core dependencies
-python-dotenv==1.0.0
-requests==2.31.0
-
-# Azure SDK
-azure-identity==1.15.0
-azure-mgmt-resource==23.0.1
-azure-mgmt-monitor==6.0.2
-azure-core==1.38.0
-azure-cosmos==4.5.1
-
-# AI/ML dependencies
-openai==1.12.0
-semantic-kernel==1.39.3
-
-# Web framework for API
-fastapi==0.109.2
-uvicorn==0.27.1
-pydantic==2.6.1
-
-# Utilities
-python-dateutil==2.8.2
-pytz==2024.1
+requests==2.32.5
+python-dotenv==1.2.1
+openai==2.14.0
+pandas==2.3.3
+azure-cosmos==4.14.3
+agent-framework --pre
+azure-ai-projects==2.0.0b2
+azure-ai-agents==1.2.0b5
+azure-ai-inference==1.0.0b9
+azure-ai-evaluation[redteam]==1.13.7
+azure-identity ==1.25.1
+opentelemetry-sdk==1.39.0
+azure-core-tracing-opentelemetry==1.0.0b12
+azure-monitor-opentelemetry==1.8.3
+opentelemetry-instrumentation-openai-v2==2.3b0
+fastapi==0.128.0
+uvicorn[standard]==0.40.0
+orjson==3.11.5
+numpy==2.2.6
+a2a-sdk[sqlite]==0.3.22
+sse-starlette==3.1.1
+starlette==0.50.0
+mcp==1.25.0
+httpx==0.28.1
+fastmcp==2.14.1
